// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates bundle for @react-navigation/native 1`] = `
{
  "files": {
    "android": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
          "react/jsx-runtime",
        ],
        "size": 84000,
      },
    },
    "ios": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
          "react/jsx-runtime",
        ],
        "size": 84000,
      },
    },
    "web": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
        ],
        "size": 93000,
      },
    },
  },
  "name": "@react-navigation/native",
  "peerDependencies": {
    "react": "*",
    "react-native": "*",
  },
  "version": "5.7.3",
}
`;

exports[`creates bundle for @react-navigation/native@7.0.0-rc.13 1`] = `
{
  "files": {
    "android": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
          "react/jsx-runtime",
        ],
        "size": 144000,
      },
    },
    "ios": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
          "react/jsx-runtime",
        ],
        "size": 144000,
      },
    },
    "web": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
          "react/jsx-runtime",
        ],
        "size": 150000,
      },
    },
  },
  "name": "@react-navigation/native",
  "peerDependencies": {
    "react": "^18.2.0",
    "react-native": "^0.72.0",
  },
  "version": "7.0.0-rc.13",
}
`;

exports[`creates bundle for @react-navigation/stack 1`] = `
{
  "files": {
    "android": {
      "assets/src_views_assets_backicon.png": {
        "size": 0,
      },
      "assets/src_views_assets_backicon@1.5x.png": {
        "size": 0,
      },
      "assets/src_views_assets_backicon@2x.png": {
        "size": 0,
      },
      "assets/src_views_assets_backicon@3x.png": {
        "size": 0,
      },
      "assets/src_views_assets_backicon@4x.png": {
        "size": 0,
      },
      "assets/src_views_assets_backiconmask.png": {
        "size": 0,
      },
      "bundle.js": {
        "externals": [
          "@react-native-community/masked-view",
          "@react-navigation/native",
          "AssetRegistry",
          "react",
          "react-native",
          "react-native-gesture-handler",
          "react-native-safe-area-context",
          "react-native-screens",
          "react/jsx-runtime",
        ],
        "size": 93000,
      },
    },
    "ios": {
      "assets/src_views_assets_backicon.png": {
        "size": 0,
      },
      "assets/src_views_assets_backicon@1.5x.png": {
        "size": 0,
      },
      "assets/src_views_assets_backicon@2x.png": {
        "size": 0,
      },
      "assets/src_views_assets_backicon@3x.png": {
        "size": 0,
      },
      "assets/src_views_assets_backicon@4x.png": {
        "size": 0,
      },
      "assets/src_views_assets_backiconmask.png": {
        "size": 0,
      },
      "bundle.js": {
        "externals": [
          "@react-native-community/masked-view",
          "@react-navigation/native",
          "AssetRegistry",
          "react",
          "react-native",
          "react-native-gesture-handler",
          "react-native-safe-area-context",
          "react-native-screens",
          "react/jsx-runtime",
        ],
        "size": 93000,
      },
    },
    "web": {
      "assets/lib_module_views_assets_backicon.png": {
        "size": 0,
      },
      "assets/lib_module_views_assets_backiconmask.png": {
        "size": 0,
      },
      "bundle.js": {
        "externals": [
          "@react-navigation/native",
          "AssetRegistry",
          "react",
          "react-native",
          "react-native-safe-area-context",
          "react-native-screens",
        ],
        "size": 102000,
      },
    },
  },
  "name": "@react-navigation/stack",
  "peerDependencies": {
    "@react-native-community/masked-view": "^0.1.0",
    "@react-navigation/native": "5.0.5",
    "react": "*",
    "react-native": "*",
    "react-native-gesture-handler": "^1.0.0",
    "react-native-safe-area-context": "^0.6.0",
    "react-native-screens": "^2.0.0",
  },
  "version": "5.9.0",
}
`;

exports[`creates bundle for @react-navigation/stack@7.0.0-rc.15 1`] = `
{
  "files": {
    "android": {
      "assets/node_modules_reactnavigation_elements_lib_commonjs_assets_backicon.png": {
        "size": 0,
      },
      "assets/node_modules_reactnavigation_elements_lib_commonjs_assets_backicon@2x.png": {
        "size": 0,
      },
      "assets/node_modules_reactnavigation_elements_lib_commonjs_assets_backicon@3x.png": {
        "size": 0,
      },
      "assets/node_modules_reactnavigation_elements_lib_commonjs_assets_backicon@4x.png": {
        "size": 0,
      },
      "assets/node_modules_reactnavigation_elements_lib_commonjs_assets_backiconmask.png": {
        "size": 0,
      },
      "bundle.js": {
        "externals": [
          "@react-navigation/native",
          "AssetRegistry",
          "react",
          "react-native",
          "react-native-gesture-handler",
          "react-native-safe-area-context",
          "react-native-screens",
          "react/jsx-runtime",
        ],
        "size": 117000,
      },
    },
    "ios": {
      "assets/node_modules_reactnavigation_elements_lib_commonjs_assets_backicon.png": {
        "size": 0,
      },
      "assets/node_modules_reactnavigation_elements_lib_commonjs_assets_backicon@2x.png": {
        "size": 0,
      },
      "assets/node_modules_reactnavigation_elements_lib_commonjs_assets_backicon@3x.png": {
        "size": 0,
      },
      "assets/node_modules_reactnavigation_elements_lib_commonjs_assets_backicon@4x.png": {
        "size": 0,
      },
      "assets/node_modules_reactnavigation_elements_lib_commonjs_assets_backiconmask.png": {
        "size": 0,
      },
      "bundle.js": {
        "externals": [
          "@react-navigation/native",
          "AssetRegistry",
          "react",
          "react-native",
          "react-native-gesture-handler",
          "react-native-safe-area-context",
          "react-native-screens",
          "react/jsx-runtime",
        ],
        "size": 117000,
      },
    },
    "web": {
      "assets/node_modules_reactnavigation_elements_lib_commonjs_assets_backicon.png": {
        "size": 0,
      },
      "assets/node_modules_reactnavigation_elements_lib_commonjs_assets_backiconmask.png": {
        "size": 0,
      },
      "bundle.js": {
        "externals": [
          "@react-navigation/native",
          "AssetRegistry",
          "react",
          "react-native",
          "react-native-safe-area-context",
          "react-native-screens",
          "react/jsx-runtime",
        ],
        "size": 114000,
      },
    },
  },
  "name": "@react-navigation/stack",
  "peerDependencies": {
    "@react-navigation/native": "7.0.0-rc.13",
    "react": "^18.2.0",
    "react-native": "^0.72.0",
    "react-native-gesture-handler": "^2.0.0",
    "react-native-safe-area-context": "^4.0.0",
    "react-native-screens": "^3.21.0",
  },
  "version": "7.0.0-rc.15",
}
`;

exports[`externalizes references to react-native-gesture-handler/DrawerLayout 1`] = `
{
  "files": {
    "ios": {
      "assets/node_modules_reactnavigationstack_lib_module_views_assets_backicon.png": {
        "size": 0,
      },
      "assets/node_modules_reactnavigationstack_lib_module_views_assets_backicon@1.5x.png": {
        "size": 0,
      },
      "assets/node_modules_reactnavigationstack_lib_module_views_assets_backicon@2x.png": {
        "size": 0,
      },
      "assets/node_modules_reactnavigationstack_lib_module_views_assets_backicon@3x.png": {
        "size": 0,
      },
      "assets/node_modules_reactnavigationstack_lib_module_views_assets_backicon@4x.png": {
        "size": 0,
      },
      "assets/node_modules_reactnavigationstack_lib_module_views_assets_backiconmask.png": {
        "size": 0,
      },
      "bundle.js": {
        "externals": [
          "@react-navigation/native",
          "AssetRegistry",
          "react",
          "react-native",
          "react-native-gesture-handler",
          "react-native-gesture-handler/DrawerLayout",
          "react-native-screens",
          "react/jsx-runtime",
        ],
        "size": 204000,
      },
    },
  },
  "name": "react-navigation",
  "peerDependencies": {
    "@react-navigation/native": "~3.6.2",
    "react": "*",
    "react-native": "*",
  },
  "version": "3.13.0",
}
`;
